[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["mavcore"]

[project]
name = "151project"
version = "0.1.0"
description = "Flight software for 151 project"
readme = "README.md"

requires-python = ">=3.10"
dependencies = [
    "pymavlink",
    "mavproxy",
    "numpy==1.26.4",
    "scipy==1.15.3",
    # Niceties
    "ruff",
    "pre-commit",
]

